fixing some styles

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="col-md-12">
   <div class="row">
-      <app-left-sidebar class="col-3 ourcomponent"></app-left-sidebar>
-      <app-timeline class="col-6 ourcomponent"></app-timeline>
-      <app-right-sidebar class="col-3 ourcomponent"></app-right-sidebar>
+      <app-left-sidebar class="col-3"></app-left-sidebar>
+      <app-timeline class="col-6"></app-timeline>
+      <app-right-sidebar class="col-3"></app-right-sidebar>
   </div>
 </div>
