fixing Merge with navbar LocalDevAdrianRuvalcaba

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="container-fluid">
-  <app-navbar class="row ournav"></app-navbar>
-  <app-home class="row ourtimeline px-5"></app-home>
+  <app-navbar class="row"></app-navbar>
+  <app-home class="row px-5" style="margin-top: 11vh;"></app-home>
 </div>
