--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -97,9 +97,6 @@ vertical-align: baseline;
     margin-bottom: 5px;
     margin-right: 10px;
     border-radius: 30px;
-    padding: 0.75em;
-    padding-left: 1em;
-    padding-right: 1em;
     background-color: #1da1f2;
     color: white;
     font-weight: bold;
@@ -113,7 +110,15 @@ vertical-align: baseline;
 }
 
 .iconoModal{
-    font-size: 40px;
-    color:  rgb(32, 82, 248);    
+    margin: auto;
+    font-size: 25px;
+    color:  rgb(77, 166, 255);    
     padding-top: 1px;
+}
+
+.taModal{
+    padding: 15px; 
+    width: 100%; 
+    border-radius: 30px; 
+    height: 100px;
 }
