--- a/src/app/components/right-sidebar/right-sidebar.component.html
+++ b/src/app/components/right-sidebar/right-sidebar.component.html
@@ -1,3 +1,73 @@
-<p>
-  right-sidebar works!
-</p>
+<div class="row" style="padding: 10px;">
+  <h5> A quien seguir </h5>
+  <p style="display: list-item; margin-left: 25px;">Actualizar</p>
+  <p style="display: list-item; margin-left: 25px;">Ver todos</p>
+
+  <div class="col-12">
+    <div class="row">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/16/Standaard_Nederlandsche_SS.svg/1200px-Standaard_Nederlandsche_SS.svg.png"
+        class="rounded-circle imgRightside col-3">
+      <div class="row col-10">
+        <div class="col-12">
+            <p class="col-12" style="padding: 0%; font-size: 14px; font-weight: bold;">Ricardo Flores Magon @Ric_fM</p>
+            <button class="btnSeguir col-12 btn btn-sm btn-outline-primary">Seguir</button>
+        </div>
+      </div>
+    </div>
+    <hr>
+  </div>
+
+  <div class="col-12">
+      <div class="row">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/16/Standaard_Nederlandsche_SS.svg/1200px-Standaard_Nederlandsche_SS.svg.png"
+          class="rounded-circle imgRightside col-3">
+        <div class="row col-10">
+          <div class="col-12">
+              <p class="col-12" style="padding: 0%; font-size: 14px; font-weight: bold;">Ricardo Flores Magon @Ric_fM</p>
+              <button class="btnSeguir col-12 btn btn-sm btn-outline-primary">Seguir</button>
+          </div>
+        </div>
+      </div>
+      <hr>
+    </div>
+
+    <div class="col-12">
+        <div class="row">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/16/Standaard_Nederlandsche_SS.svg/1200px-Standaard_Nederlandsche_SS.svg.png"
+            class="rounded-circle imgRightside col-3">
+          <div class="row col-10">
+            <div class="col-12">
+                <p class="col-12" style="padding: 0%; font-size: 14px; font-weight: bold;">Ricardo Flores Magon @Ric_fM</p>
+                <button class="btnSeguir col-12 btn btn-sm btn-outline-primary">Seguir</button>
+            </div>
+          </div>
+        </div>
+        <hr>
+      </div>
+
+</div>
+
+<div class="row">
+  <div class="col-12">
+      <i class="iconoModal fa fa-image"></i>
+    <h6 style="font-weight: bold; padding: 0%; margin: 0%;">Encuentra personas que conoces</h6>
+    <p>Importa tus contactos de Gmail</p>
+    <hr>
+  </div>
+</div>
+
+<div class="row" style="margin-top: 15px;">
+  <div class="col-12">
+    <div class="row">
+      <p class="col-5" style="margin: 0%"> C 2018 Twitter</p>
+      <p class="col-6" style="padding: 0; margin: inherit;"> Sobre nosotros</p>
+      <p class="col-6" style="margin: 0%"> Centro de ayuda</p>
+      <p class="col-6" style="padding: 0; margin: inherit;"> Condiciones</p>
+      <p class="col-6" style="margin: 0%">Politica de privacidad</p>
+      <p class="col-6" style="padding: 0; margin: inherit;"> Cookies</p>
+      <p class="col-6" style="margin: 0%"> Informacion sobre anuncions</p>
+      <p class="col-6" style="padding: 0; margin: inherit;"> Derechos de autor</p>
+   
+    </div>
+  </div>
+</div>
