left side bar component

--- a/src/app/components/left-sidebar/left-sidebar.component.html
+++ b/src/app/components/left-sidebar/left-sidebar.component.html
@@ -1,3 +1,120 @@
-<p>
-  left-sidebar works!
+<p style="float: left; clear: left">
+  <img src="http://cambioya.lexartlabs.uy/landing/wp-content/uploads/2017/02/carlos.png" height="75px" border="1px">
 </p>
+<p>
+  <font face="segoe UI" size="3.5" color="black">
+    <b>Eugenio Garza</b>
+    <br>
+    <font face="segoe UI" size="2" color="#999999">@soyeugeniogarza</font>
+  </font>
+</p>
+
+<hr>
+
+<table id="t01">
+  <tr>
+    <th>
+      <font face="segoe UI" size="2" color="#999999">
+        <b> Tweets </b>
+      </font>
+    </th>
+    <th>
+      <font face="segoe UI" size="2" color="#999999">
+        <b> Siguiendo </b>
+      </font>
+    </th>
+    <th>
+      <font face="segoe UI" size="2" color="#999999">
+        <b> Seguidores </b>
+      </font>
+    </th>
+  </tr>
+  <tr>
+    <td>
+      <font face="segoe UI" size="3.5" color="#0099cc">
+        214
+      </font>
+    </td>
+    <td>
+      <font face="segoe UI" size="3.5" color="#0099cc">
+        116
+      </font>
+    </td>
+    <td>
+      <font face="segoe UI" size="3.5" color="#0099cc">
+        94
+      </font>
+    </td>
+  </tr>
+</table>
+<hr>
+
+
+<p>
+  <font face="segoe UI" size="5">
+    <b>Tendencias para ti</b>
+  </font>
+  <font face="segoe UI" size="3" color="#0099cc">
+    Cambiar
+  </font>
+</p>
+
+<div>
+  <font face="segoe UI" size="4" color="#0099cc">
+    <b>#BuenViernes</b>
+  </font>
+</div>
+<div>
+  <font face="segoe UI" size="2" color="#999999">
+    16,7 mil Tweetss
+  </font>
+</div>
+<br>
+
+<div>
+  <font face="segoe UI" size="4" color="#0099cc">
+    <b>#China</b>
+  </font>
+</div>
+<div>
+  <font face="segoe UI" size="2" color="#999999">
+    34,7 mil Tweetss
+  </font>
+</div>
+<br>
+
+<div>
+  <font face="segoe UI" size="4" color="#0099cc">
+    <b>#InternationalBeerDay</b>
+  </font>
+</div>
+<div>
+  <font face="segoe UI" size="2" color="#999999">
+    24,7 mil Tweetss
+  </font>
+</div>
+<br>
+
+<div>
+  <font face="segoe UI" size="4" color="#0099cc">
+    <b>#DiaInternacionalDeLaCerveza</b>
+  </font>
+</div>
+<div>
+  <font face="segoe UI" size="2" color="#999999">
+    11 datos dobre la cerveza
+  </font>
+</div>
+<br>
+
+<div>
+  <font face="segoe UI" size="4" color="#0099cc">
+    <b>#CosasQueNoSabias</b>
+  </font>
+</div>
+<div>
+  <font face="segoe UI" size="2" color="#999999">
+    56,8 mil Tweets
+  </font>
+</div>
+<br>
