--- a/src/app/components/right-sidebar/right-sidebar.component.css
+++ b/src/app/components/right-sidebar/right-sidebar.component.css
@@ -1,8 +1,13 @@
 .imgRightside {
-    height: 60px;
+    height: 55px;
     width: 60px;
 }
 
 .btnSeguir{
     width: 80px;
+    border-radius: 25px;
+}
+
+.PE{
+    font-size: 14px;
 }
