fixing sidebar left styles

--- a/src/app/components/left-sidebar/left-sidebar.component.html
+++ b/src/app/components/left-sidebar/left-sidebar.component.html
@@ -1,120 +1,126 @@
-<p style="float: left; clear: left">
-  <img src="http://cambioya.lexartlabs.uy/landing/wp-content/uploads/2017/02/carlos.png" height="75px" border="1px">
-</p>
-<p>
-  <font face="segoe UI" size="3.5" color="black">
-    <b>Eugenio Garza</b>
-    <br>
-    <font face="segoe UI" size="2" color="#999999">@soyeugeniogarza</font>
-  </font>
-</p>
+<div>
+  <div class="row mx-1" style="background-color: #0099cc; height: 90px;"></div>
+  <div class="row mx-1 mb-2 p-3" style="background-color: white; height: 150px;">
+    <div class="col-md-4">
+      <p style="float: left; clear: left; border: white 4px solid; margin-top: -45px; height: 75px; margin-left: -10px;" class="rounded-circle">
+        <img src="http://cambioya.lexartlabs.uy/landing/wp-content/uploads/2017/02/carlos.png" height="70px" border="1px">
+      </p>
+    </div>
+    <div class="col-md-8">
+      <p style="margin-top: -16px; margin-left: 8px;">
+        <font face="segoe UI" size="4.5" color="black">
+          <b>Eugenio Garza</b>
+          <br>
+          <font face="segoe UI" size="2" color="#999999">@soyeugeniogarza</font>
+        </font>
+      </p>
+    </div>
+    <table id="t01">
+        <tr>
+          <th class="tablespacing">
+            <font face="segoe UI" size="2" color="#999999">
+              <b> Tweets </b>
+            </font>
+          </th>
+          <th class="tablespacing">
+            <font face="segoe UI" size="2" color="#999999">
+              <b> Siguiendo </b>
+            </font>
+          </th>
+          <th class="tablespacing">
+            <font face="segoe UI" size="2" color="#999999">
+              <b> Seguidores </b>
+            </font>
+          </th>
+        </tr>
+        <tr>
+          <td class="tablespacing">
+            <font face="segoe UI" size="3.5" color="#0099cc">
+              214
+            </font>
+          </td>
+          <td class="tablespacing">
+            <font face="segoe UI" size="3.5" color="#0099cc">
+              116
+            </font>
+          </td>
+          <td class="tablespacing">
+            <font face="segoe UI" size="3.5" color="#0099cc">
+              94
+            </font>
+          </td>
+        </tr>
+    </table>
+  </div>
+</div>
 
-<hr>
+<div class="mt-3 p-3" style="background-color: white; ">
+  <p>
+    <font face="segoe UI" size="5">
+      <b>Tendencias para ti</b>
+    </font>
+    <font face="segoe UI" size="3" color="#0099cc">
+      Cambiar
+    </font>
+  </p>
 
-<table id="t01">
-  <tr>
-    <th>
-      <font face="segoe UI" size="2" color="#999999">
-        <b> Tweets </b>
-      </font>
-    </th>
-    <th>
-      <font face="segoe UI" size="2" color="#999999">
-        <b> Siguiendo </b>
-      </font>
-    </th>
-    <th>
-      <font face="segoe UI" size="2" color="#999999">
-        <b> Seguidores </b>
-      </font>
-    </th>
-  </tr>
-  <tr>
-    <td>
-      <font face="segoe UI" size="3.5" color="#0099cc">
-        214
-      </font>
-    </td>
-    <td>
-      <font face="segoe UI" size="3.5" color="#0099cc">
-        116
-      </font>
-    </td>
-    <td>
-      <font face="segoe UI" size="3.5" color="#0099cc">
-        94
-      </font>
-    </td>
-  </tr>
-</table>
-<hr>
+  <div>
+    <font face="segoe UI" size="4" color="#0099cc">
+      <b>#BuenViernes</b>
+    </font>
+  </div>
+  <div>
+    <font face="segoe UI" size="2" color="#999999">
+      16,7 mil Tweetss
+    </font>
+  </div>
+  <br>
 
+  <div>
+    <font face="segoe UI" size="4" color="#0099cc">
+      <b>#China</b>
+    </font>
+  </div>
+  <div>
+    <font face="segoe UI" size="2" color="#999999">
+      34,7 mil Tweetss
+    </font>
+  </div>
+  <br>
 
-<p>
-  <font face="segoe UI" size="5">
-    <b>Tendencias para ti</b>
-  </font>
-  <font face="segoe UI" size="3" color="#0099cc">
-    Cambiar
-  </font>
-</p>
+  <div>
+    <font face="segoe UI" size="4" color="#0099cc">
+      <b>#InternationalBeerDay</b>
+    </font>
+  </div>
+  <div>
+    <font face="segoe UI" size="2" color="#999999">
+      24,7 mil Tweetss
+    </font>
+  </div>
+  <br>
 
-<div>
-  <font face="segoe UI" size="4" color="#0099cc">
-    <b>#BuenViernes</b>
-  </font>
-</div>
-<div>
-  <font face="segoe UI" size="2" color="#999999">
-    16,7 mil Tweetss
-  </font>
-</div>
-<br>
+  <div>
+    <font face="segoe UI" size="4" color="#0099cc">
+      <b>#DiaInternacionalDeLaCerveza</b>
+    </font>
+  </div>
+  <div>
+    <font face="segoe UI" size="2" color="#999999">
+      11 datos dobre la cerveza
+    </font>
+  </div>
+  <br>
 
-<div>
-  <font face="segoe UI" size="4" color="#0099cc">
-    <b>#China</b>
-  </font>
+  <div>
+    <font face="segoe UI" size="4" color="#0099cc">
+      <b>#CosasQueNoSabias</b>
+    </font>
+  </div>
+  <div>
+    <font face="segoe UI" size="2" color="#999999">
+      56,8 mil Tweets
+    </font>
+  </div>
+  <br>
 </div>
-<div>
-  <font face="segoe UI" size="2" color="#999999">
-    34,7 mil Tweetss
-  </font>
-</div>
-<br>
-
-<div>
-  <font face="segoe UI" size="4" color="#0099cc">
-    <b>#InternationalBeerDay</b>
-  </font>
-</div>
-<div>
-  <font face="segoe UI" size="2" color="#999999">
-    24,7 mil Tweetss
-  </font>
-</div>
-<br>
-
-<div>
-  <font face="segoe UI" size="4" color="#0099cc">
-    <b>#DiaInternacionalDeLaCerveza</b>
-  </font>
-</div>
-<div>
-  <font face="segoe UI" size="2" color="#999999">
-    11 datos dobre la cerveza
-  </font>
-</div>
-<br>
-
-<div>
-  <font face="segoe UI" size="4" color="#0099cc">
-    <b>#CosasQueNoSabias</b>
-  </font>
-</div>
-<div>
-  <font face="segoe UI" size="2" color="#999999">
-    56,8 mil Tweets
-  </font>
-</div>
-<br>
